--- a/web-app/app.html
+++ b/web-app/app.html
@@ -17,6 +17,8 @@
             </div>
             <div id="room">
                 <h1 id="room_code"></h1>
+                <h2 id="song_name"></h2>
+                <h3 id="song_artists"></h2>
                 <div id="buttons">
                     <div id="add_queue">
                         <input type="text" placeholder="Song name" id="songNameInput" >
